nginx-argo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-argo
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: quay.io/redhattraining/hello-world-nginx:v1.0
          ports:
            - containerPort: 8080
