nginx-argo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-argo-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
